# TinyOrmOnboarding

./: .gitmodules  CMakeLists.txt  MyTest.cpp  MyTest.hpp  MyTinyTest.cpp  build.ps1  main.cpp  test.ps1  vcpkg.json
.github/workflows/: cmake.yml  dependencies.yml
